--- a/bawahan.html
+++ b/bawahan.html
@@ -19,5 +19,6 @@
 
     <div class="container tertiary-text bg-dark fg-white padding10">
         2024 &copy; Powered by  <a href="https://jonathanzefanya.github.io/Portfolio-Pribadi/" class="fg-blue">WISATHAN</a>
+        <span class="place-right">If you operator or admin, you can login at <a href="http://localhost/latihan-web/JWD_Final_Project/admin" class="fg-blue">here</a></span>
     </div>
 </div>
